adds product routes
