# docs/swagger.yaml
@@ -2,7 +2,7 @@ definitions:
   product.Product:
     properties:
       base_price:
-        type: integer
+        type: number
       category:
         type: string
       created_at:
@@ -11,8 +11,8 @@ definitions:
         type: integer
       name:
         type: string
-      tariffedPrice:
-        type: integer
+      tariffed_price:
+        type: number
       updated_at:
         type: string
     required:
@@ -24,10 +24,34 @@ info:
   contact: {}
 paths:
   /api/management/product:
+    get:
+      description: FindByName product
+      parameters:
+      - description: name
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/product.Product'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: FindByName product
+      tags:
+      - Product
     post:
       consumes:
       - application/json
-      description: Create integrator
+      description: Create product
       parameters:
       - description: Body
         in: body
@@ -38,17 +62,40 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/product.Product'
         "400":
           description: Bad Request
-        "422":
-          description: Unprocessable Entity
         "500":
           description: Internal Server Error
-      summary: Create integrator
+      summary: Create product
       tags:
-      - Integrator
+      - Product
+    put:
+      consumes:
+      - application/json
+      description: UpdateBYID product
+      parameters:
+      - description: Body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/product.Product'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/product.Product'
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: UpdateByID product
+      tags:
+      - Product
 swagger: "2.0"
